// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backportJestConfig with "globals.__TRANSFORM_HTML__" set to false should have changed the config correctly: before 1`] = `
Object {
  "globals": Object {
    "__TRANSFORM_HTML__": false,
  },
}
`;

exports[`backportJestConfig with "globals.__TRANSFORM_HTML__" set to false should have changed the config correctly: migrated 1`] = `
Object {
  "globals": Object {
    "ts-jest": Object {},
  },
}
`;

exports[`backportJestConfig with "globals.__TRANSFORM_HTML__" set to true should have changed the config correctly: before 1`] = `
Object {
  "globals": Object {
    "__TRANSFORM_HTML__": true,
  },
}
`;

exports[`backportJestConfig with "globals.__TRANSFORM_HTML__" set to true should have changed the config correctly: migrated 1`] = `
Object {
  "globals": Object {
    "ts-jest": Object {
      "stringifyContentPathRegex": "\\\\.html?$",
    },
  },
}
`;

exports[`backportJestConfig with "globals.__TS_CONFIG__" set to { foo: 'bar' } should have changed the config correctly: before 1`] = `
Object {
  "globals": Object {
    "__TS_CONFIG__": Object {
      "foo": "bar",
    },
  },
}
`;

exports[`backportJestConfig with "globals.__TS_CONFIG__" set to { foo: 'bar' } should have changed the config correctly: migrated 1`] = `
Object {
  "globals": Object {
    "ts-jest": Object {
      "tsConfig": Object {
        "foo": "bar",
      },
    },
  },
}
`;

exports[`backportJestConfig with "globals.ts-jest.babelConfig" set to { foo: 'bar' } should have changed the config correctly: before 1`] = `
Object {
  "globals": Object {
    "ts-jest": Object {
      "babelConfig": Object {
        "foo": "bar",
      },
    },
  },
}
`;

exports[`backportJestConfig with "globals.ts-jest.babelConfig" set to { foo: 'bar' } should have changed the config correctly: migrated 1`] = `
Object {
  "globals": Object {
    "ts-jest": Object {
      "babelJest": Object {
        "foo": "bar",
      },
    },
  },
}
`;

exports[`backportJestConfig with "globals.ts-jest.skipBabel" set to false should have changed the config correctly: before 1`] = `
Object {
  "globals": Object {
    "ts-jest": Object {
      "skipBabel": false,
    },
  },
}
`;

exports[`backportJestConfig with "globals.ts-jest.skipBabel" set to false should have changed the config correctly: migrated 1`] = `
Object {
  "globals": Object {
    "ts-jest": Object {
      "babelJest": true,
    },
  },
}
`;

exports[`backportJestConfig with "globals.ts-jest.skipBabel" set to true should have changed the config correctly: before 1`] = `
Object {
  "globals": Object {
    "ts-jest": Object {
      "skipBabel": true,
    },
  },
}
`;

exports[`backportJestConfig with "globals.ts-jest.skipBabel" set to true should have changed the config correctly: migrated 1`] = `
Object {
  "globals": Object {
    "ts-jest": Object {},
  },
}
`;

exports[`backportJestConfig with "globals.ts-jest.tsConfigFile" set to 'tsconfig.build.json' should have changed the config correctly: before 1`] = `
Object {
  "globals": Object {
    "ts-jest": Object {
      "tsConfigFile": "tsconfig.build.json",
    },
  },
}
`;

exports[`backportJestConfig with "globals.ts-jest.tsConfigFile" set to 'tsconfig.build.json' should have changed the config correctly: migrated 1`] = `
Object {
  "globals": Object {
    "ts-jest": Object {
      "tsConfig": "tsconfig.build.json",
    },
  },
}
`;

exports[`backportJestConfig with "globals.ts-jest.useBabelrc" set to false should have changed the config correctly: before 1`] = `
Object {
  "globals": Object {
    "ts-jest": Object {
      "useBabelrc": false,
    },
  },
}
`;

exports[`backportJestConfig with "globals.ts-jest.useBabelrc" set to false should have changed the config correctly: migrated 1`] = `
Object {
  "globals": Object {
    "ts-jest": Object {
      "babelJest": Object {},
    },
  },
}
`;

exports[`backportJestConfig with "globals.ts-jest.useBabelrc" set to true should have changed the config correctly: before 1`] = `
Object {
  "globals": Object {
    "ts-jest": Object {
      "useBabelrc": true,
    },
  },
}
`;

exports[`backportJestConfig with "globals.ts-jest.useBabelrc" set to true should have changed the config correctly: migrated 1`] = `
Object {
  "globals": Object {
    "ts-jest": Object {
      "babelJest": true,
    },
  },
}
`;
